#5 - Fixed implementation [skip ci]